Add Why Choose Us, react-particles

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,11 @@
   crossorigin="anonymous"
 />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+ 
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
+     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="particles.js"></script>
     <title>New Future Company</title>
   </head>
   <body>
